<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/counterValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/killButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kill" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count" />

    <Button
        android:id="@+id/activityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newActivity" />

    <Button
        android:id="@+id/dialogueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchDialogue"
        android:text="@string/newdialogue" />
    <Button
        android:id="@+id/rotateScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="rotateScreen"
        android:text="@string/rotatescreen" />

    <EditText
        android:id="@+id/input"
        style="@style/style1.pink.big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="type anything here" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dip"
            android:text="@string/messagemain" />
    </ScrollView>

</LinearLayout>